# Nsight-Demo

./: CMakeLists.txt  README.md
deploy/: Dockerfile  build-docker.sh  profile.sh  run-docker.sh
include/: common.h
src/: main.cu
